# structural-color

./: .gitignore  INSTALL.txt  README.md  bulk_montecarlo_tutorial.ipynb  bulk_polydispersity_tutorial.ipynb  color_env.yml  color_mixing_tutorial.ipynb  combined_params_bulk_montecarlo.ipynb  detector_tutorial.ipynb  environment.yml  event_distribution.py  event_distribution_tutorial.ipynb  montecarlo.ipynb  montecarlo_tutorial.ipynb  phase_tutorial.ipynb  polarization_testing.ipynb  polarization_tutorial.ipynb  pyproject.toml  setup.py  structure_factor_data.ipynb  tutorial.ipynb
.github/workflows/: lint_and_test.yml
structcol/: __init__.py  arrangements.py  containers.py  detector.py  detector_polarization_phase.py  event_distribution.py  mie.py  mie_specfuncs.py  model.py  montecarlo.py  particle.py  phase_func_sphere.py  refractive_index.py  silica-suspension_vs_model.txt  sources.py  structure.py
structcol/tests/: __init__.py  test_arrangements.py  test_containers.py  test_detector.py  test_detector_sphere.py  test_event_distribution.py  test_fields.py  test_mie.py  test_model.py  test_montecarlo.py  test_montecarlo_bulk.py  test_montecarlo_sphere.py  test_particle.py  test_phase.py  test_refractive_index.py  (+3 more)
tutorials/: detector_tutorial.ipynb  event_distribution_tutorial.ipynb  fields_montecarlo_tutorial.ipynb  montecarlo_tutorial.ipynb  multiscale_color_mixing_tutorial.ipynb  multiscale_montecarlo_tutorial.ipynb  multiscale_polydispersity_tutorial.ipynb  phase_tutorial.ipynb  polarization_tutorial.ipynb  structure_factor_data_tutorial.ipynb  tutorial.ipynb
